<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView3" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="@dimen/component_padding"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_address_header"
                    android:textColor="@color/btn_background_color"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_first_name"
                    android:layout_marginTop="@dimen/component_padding_20"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/et_first_name"
                    android:ems="10"
                   />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_last_name"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_last_name"
                    android:inputType="textPersonName"
                    android:ems="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_wide_street"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/et_wide_street1"
                    android:ems="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_wide"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/et_wide"
                    android:ems="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_country"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:id="@+id/et_country"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_region"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:id="@+id/et_region"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_city"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:id="@+id/et_city"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_postal_code"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_postal_code"
                    android:inputType="number"
                    android:ems="10"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_tetephone"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/et_telephone"
                    android:ems="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_fax"
                    android:layout_marginTop="@dimen/component_padding"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/et_fax"
                    android:ems="10"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/component_padding_20"
                    android:text="@string/txt_next"
                    android:background="@drawable/login_button_selector"
                    android:textColor="@color/white"
                    android:id="@+id/btn_next" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
