<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/whit_edit_text"
        android:padding="@dimen/component_padding"
        android:layout_marginBottom="@dimen/component_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/btn_background_color"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_coupan_header"
            android:id="@+id/textView20" />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/component_padding"
            android:background="@drawable/whit_edit_text"
            android:padding="@dimen/component_padding"
            android:layout_height="wrap_content"
            android:id="@+id/editText" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/component_padding"
            android:text="@string/txt_apply"
            android:textColor="@color/white"
            android:background="@drawable/login_button_selector"
            android:id="@+id/button" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/whit_edit_text"
        android:layout_marginTop="@dimen/component_padding_20"
        android:padding="@dimen/component_padding"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/component_padding_20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_total"
            android:textColor="@color/btn_background_color"
            android:id="@+id/textView21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/btn_background_color"
            android:layout_marginRight="@dimen/component_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/cart_total" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_padding_20"
        android:background="@drawable/login_button_selector"
        android:textColor="@color/white"
        android:text="@string/txt_process_checkout"

        android:id="@+id/btn_checkout" />


</LinearLayout>
